menambahkan huruf di nav link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul class="nav-list">
-            <li><a href="#" class="nav-link">home</a></li>
+            <li><a href="#" class="nav-link">Home</a></li>
             <li><a href="#" class="nav-link">Project</a></li>
             <li><a href="#" class="nav-link">Gallery</a></li>
             <li><a href="#" class="nav-link">Contact</a></li>
